--- a/DirectX_Study.vcxproj.filters
+++ b/DirectX_Study.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClInclude Include="FrameWork.h">
       <Filter>Main</Filter>
     </ClInclude>
-    <ClInclude Include="MainGame.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
     <ClInclude Include="targetver.h">
       <Filter>Common</Filter>
     </ClInclude>
@@ -123,6 +120,9 @@
     <ClInclude Include="SoundManager.h">
       <Filter>Image</Filter>
     </ClInclude>
+    <ClInclude Include="Clock.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyDevice.cpp">
@@ -133,9 +133,6 @@
     </ClCompile>
     <ClCompile Include="FrameWork.cpp">
       <Filter>Main</Filter>
-    </ClCompile>
-    <ClCompile Include="MainGame.cpp">
-      <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
       <Filter>Common</Filter>
@@ -181,6 +178,9 @@
     </ClCompile>
     <ClCompile Include="SoundManager.cpp">
       <Filter>Image</Filter>
+    </ClCompile>
+    <ClCompile Include="Clock.cpp">
+      <Filter>Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
