--- a/DirectX_Study.vcxproj.filters
+++ b/DirectX_Study.vcxproj.filters
@@ -123,6 +123,12 @@
     <ClInclude Include="Clock.h">
       <Filter>Scene</Filter>
     </ClInclude>
+    <ClInclude Include="Aquarium.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniGame.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyDevice.cpp">
@@ -181,6 +187,12 @@
     </ClCompile>
     <ClCompile Include="Clock.cpp">
       <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Aquarium.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MiniGame.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
